hphp/test/zend/good/ext/curl/tests/curl_reset.php.skipif
<?php if (!extension_loaded("curl")) print "skip";
if (!function_exists("curl_reset")) exit("skip curl_reset doesn't exists (require libcurl >= 7.12.1)");
?>